# stream-processor

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  README.md
include/: camera.hpp  jpeg_compressor.hpp  parse_arg.hpp  stream_processor.hpp  text_overlay.hpp
src/: camera.cc  jpeg_compressor.cc  main.cc  parse_arg.cc  stream_processor.cc  text_overlay.cc
test-images/: 640x480-test-image.ppm  bottom-cst.ppm  bottom-left-font.ppm  bottom-overflow-cst.ppm  bottom-right-font.ppm  top-cst.ppm  top-left-font.ppm  top-right-font.ppm
tests/: benchmarks.cc  camera.test.hpp  jpeg_compressor.test.hpp  parse_arg.test.hpp  stream_processor.test.hpp  tests.cc  text_overlay.test.hpp  utils.test.hpp
